force-app/main/default/objects/Llamada_API__c/Llamada_API__c.object-meta.xml
<CustomObject>
    <label>Llamada API</label>
    <nameField>
        <displayFormat>LLA-{0000}</displayFormat>
        <label>Nombre de Llamada API</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Llamadas API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>