force-app/main/default/objects/Llamada_API__c/fields/C_digo_respuesta__c.field-meta.xml
<CustomField>
    <fullName>C_digo_respuesta__c</fullName>
    <label>Código respuesta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>