force-app/main/default/objects/Llamada_API__c/fields/Con_error__c.field-meta.xml
<CustomField>
    <fullName>Con_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con error</label>
    <type>Checkbox</type>
</CustomField>