force-app/main/default/objects/Llamada_API__c/fields/Estado_proceso_programado__c.field-meta.xml
<CustomField>
    <fullName>Estado_proceso_programado__c</fullName>
    <label>Estado proceso programado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Programado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>