force-app/main/default/objects/Llamada_API__c/fields/Id_objeto__c.field-meta.xml
<CustomField>
    <fullName>Id_objeto__c</fullName>
    <label>Id objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>