force-app/main/default/objects/Llamada_API__c/fields/Mensaje_proceso_programado__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_proceso_programado__c</fullName>
    <label>Mensaje proceso programado</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>