force-app/main/default/objects/Llamada_API__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <label>Respuesta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>