force-app/main/default/objects/Llamada_API__c/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <label>Solicitud</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>